--- a/core/templates/core/partials/quizB.html
+++ b/core/templates/core/partials/quizB.html
@@ -11,13 +11,13 @@
         <div class="list-group">
             {% for answer in answers %}
             <form id="groupA" hx-post="{% url 'start-quiz' %}" hx-target="#quiz-group-A" ws-send="answer-quiz" 
-                hx-vals='{"group": "A", "question": "{{count}}", "answer": "{{ answer }}", "user": "{{ user}}"}' class="mb-2">
+                hx-vals='{"group": "B", "question": "{{count}}", "answer": "{{ answer }}", "user": "{{ user}}"}' class="mb-2">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary btn-block">{{ answer }}</button>
             </form>
             {% endfor %}
         </div>
-        {% include 'core/partials/user_answer_A.html' %}
+        {% include 'core/partials/user_answer_B.html' %}
     </div>
 </div>
 {% endif %}
